--- a/env.yml
+++ b/env.yml
@@ -15,4 +15,7 @@ dependencies:
       - supervision
       - ultra-analytics
       - RPi.GPIO
+      - boto3
+      - python-dotenv
+      - requests
 
